--- a/mastermind/MainWindow.xaml
+++ b/mastermind/MainWindow.xaml
@@ -62,5 +62,7 @@
         <Border Name="color4Label" HorizontalAlignment="Left" Height="100" Margin="604,114,0,0" VerticalAlignment="Top" Width="100"  BorderBrush="Black" BorderThickness="2" CornerRadius="50">
             <Label Background="Transparent"/>
         </Border>
+        <TextBox x:Name="debugCodeTextBox" HorizontalAlignment="Center" Margin="0,354,0,0" TextWrapping="Wrap" Text="{Binding generatedCode}" VerticalAlignment="Top" Width="300" Height="50" IsReadOnly="True" Visibility="Collapsed" />
+
     </Grid>
 </Window>
